--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -7,8 +7,8 @@
 
 .main-content {
   flex-grow: 1;
-  padding-top: 70px; /* Account for fixed header */
-  background-color: #fff;
+  padding-top: 80px; /* Account for fixed header */
+  width: 100%;
 }
 
 /* Ensure proper spacing for the content */
