--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,13 +1,12 @@
 .app-layout {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
-  background-color: #f8f9fa;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .main-content {
   flex-grow: 1;
-  padding-top: 80px; /* Account for fixed header */
   width: 100%;
 }
 
